--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>war</packaging>
     <properties>
         <spring.version>4.1.5.RELEASE</spring.version>
+        <flyway.SQL.directory>./src/main/resources/db/migration</flyway.SQL.directory>
     </properties>
     <dependencies>
         <dependency>
@@ -27,7 +28,33 @@
             <artifactId>spring-core</artifactId>
             <version>4.2.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.flyway</groupId>
+            <artifactId>flyway-maven-plugin</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.googlecode.flyway</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <user>postgres</user>
+                    <password>hitler140</password>
+                    <url>jdbc:postgresql://localhost:5432/bus-reservation</url>
+                    <outOfOrder>true</outOfOrder>
+                    <initOnMigrate>true</initOnMigrate>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
+
