--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,26 @@
             <version>5.2.6.Final</version>
         </dependency>
         <dependency>
+            <groupId>com.github.the-alchemist</groupId>
+            <artifactId>hibernate-postresql</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>net.moznion</groupId>
+            <artifactId>transaction-manager</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>4.3.5.RELEASE</version>
